// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component Should match the snapshot 1`] = `
.Button-module__button___AbcpN {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.Button-module__button-default___miWV3 {
  color: var(--qtm-colors-neutral-0);
}

.Button-module__button-default-primary___bURr2 {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.Button-module__button-medium___qo6Ym,
.Button-module__button-small___HWutw {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.Button-module__button-medium___qo6Ym {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.Button-module__shadow-2-neutral-500___hxqSk {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

<button
  class="Button-module__button___AbcpN Button-module__button-medium___qo6Ym Button-module__button-default___miWV3 Button-module__button-default-primary___bURr2 Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-primary-900___HdA30 Button-module__shadow-4-primary-700___Gs4yK Button-module__shadow-8-primary-900___f0GvH"
  type="button"
>
  Text
</button>
`;

exports[`Button component should render a button only icon state  1`] = `
.Button-module__button___AbcpN {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.Button-module__button-default___miWV3 {
  color: var(--qtm-colors-neutral-0);
}

.Button-module__button-default-primary___bURr2 {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.Button-module__button-icon___c2VCp {
  pointer-events: none;
}

.Button-module__button-icon-medium___ppo2m,
.Button-module__button-icon-small___m8db9,
.Button-module__button-icon-xsmall___prEKP {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.Button-module__button-medium___qo6Ym,
.Button-module__button-small___HWutw {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.Button-module__button-medium___qo6Ym {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.Button-module__shadow-2-neutral-500___hxqSk {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

<button
  class="Button-module__button___AbcpN Button-module__button-medium___qo6Ym Button-module__button-default___miWV3 Button-module__button-default-primary___bURr2 Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-primary-900___HdA30 Button-module__shadow-4-primary-700___Gs4yK Button-module__shadow-8-primary-900___f0GvH"
  type="button"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium Button-module__button-icon___c2VCp Button-module__button-icon-medium___ppo2m css-i4bv87-MuiSvgIcon-root"
    data-qtm-preloader="icon"
    data-testid="InfoIcon"
    focusable="false"
    style="font-size: 24px; max-width: 24px;"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-6h2zm0-8h-2V7h2z"
    />
  </svg>
</button>
`;

exports[`Button component should render a button only icon state  2`] = `
.Button-module__button___AbcpN {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.Button-module__button-default___miWV3 {
  color: var(--qtm-colors-neutral-0);
}

.Button-module__button-default-primary___bURr2 {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.Button-module__button-icon___c2VCp {
  pointer-events: none;
}

.Button-module__button-icon-medium___ppo2m,
.Button-module__button-icon-small___m8db9,
.Button-module__button-icon-xsmall___prEKP {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.Button-module__button-xsmall___4UqNE {
  line-height: var(--qtm-base-font-size);
  min-height: var(--qtm-spacing-large);
  padding: 0 var(--qtm-spacing-xsmall);
}

.Button-module__button-small___HWutw,
.Button-module__button-xsmall___4UqNE {
  font-size: var(--qtm-font-size-12);
}

.Button-module__shadow-2-neutral-500___hxqSk {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

<button
  class="Button-module__button___AbcpN Button-module__button-xsmall___4UqNE Button-module__button-default___miWV3 Button-module__button-default-primary___bURr2 Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-primary-900___HdA30 Button-module__shadow-4-primary-700___Gs4yK Button-module__shadow-8-primary-900___f0GvH"
  type="button"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium Button-module__button-icon___c2VCp Button-module__button-icon-xsmall___prEKP css-i4bv87-MuiSvgIcon-root"
    data-qtm-preloader="icon"
    data-testid="InfoIcon"
    focusable="false"
    style="font-size: 8px; max-width: 8px;"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-6h2zm0-8h-2V7h2z"
    />
  </svg>
</button>
`;

exports[`Button component should render a button only icon state  3`] = `
.Button-module__button___AbcpN {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.Button-module__button-default___miWV3 {
  color: var(--qtm-colors-neutral-0);
}

.Button-module__button-default-primary___bURr2 {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.Button-module__button-icon___c2VCp {
  pointer-events: none;
}

.Button-module__button-icon-medium___ppo2m,
.Button-module__button-icon-small___m8db9,
.Button-module__button-icon-xsmall___prEKP {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.Button-module__button-small___HWutw,
.Button-module__button-xsmall___4UqNE {
  font-size: var(--qtm-font-size-12);
}

.Button-module__button-small___HWutw {
  line-height: calc(var(--qtm-base-font-size)*.75*1.5);
  min-height: var(--qtm-spacing-xlarge);
}

.Button-module__button-medium___qo6Ym,
.Button-module__button-small___HWutw {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.Button-module__shadow-2-neutral-500___hxqSk {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

<button
  class="Button-module__button___AbcpN Button-module__button-small___HWutw Button-module__button-default___miWV3 Button-module__button-default-primary___bURr2 Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-primary-900___HdA30 Button-module__shadow-4-primary-700___Gs4yK Button-module__shadow-8-primary-900___f0GvH"
  type="button"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium Button-module__button-icon___c2VCp Button-module__button-icon-small___m8db9 css-i4bv87-MuiSvgIcon-root"
    data-qtm-preloader="icon"
    data-testid="InfoIcon"
    focusable="false"
    style="font-size: 16px; max-width: 16px;"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-6h2zm0-8h-2V7h2z"
    />
  </svg>
</button>
`;

exports[`Button component should render a button only icon state  4`] = `
.Button-module__button___AbcpN {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.Button-module__button-default___miWV3 {
  color: var(--qtm-colors-neutral-0);
}

.Button-module__button-default-primary___bURr2 {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.Button-module__button-icon___c2VCp {
  pointer-events: none;
}

.Button-module__button-large___U5QhC {
  font-size: var(--qtm-font-size-20);
  line-height: calc(var(--qtm-base-font-size)*1.75);
  min-height: var(--qtm-spacing-xxxlarge);
}

.Button-module__button-large___U5QhC,
.Button-module__button-xlarge___5YRMz {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.Button-module__shadow-2-neutral-500___hxqSk {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

<button
  class="Button-module__button___AbcpN Button-module__button-large___U5QhC Button-module__button-default___miWV3 Button-module__button-default-primary___bURr2 Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-primary-900___HdA30 Button-module__shadow-4-primary-700___Gs4yK Button-module__shadow-8-primary-900___f0GvH"
  type="button"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium Button-module__button-icon___c2VCp css-i4bv87-MuiSvgIcon-root"
    data-qtm-preloader="icon"
    data-testid="InfoIcon"
    focusable="false"
    style="font-size: 32px; max-width: 32px;"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-6h2zm0-8h-2V7h2z"
    />
  </svg>
</button>
`;

exports[`Button component should render a button only icon state  5`] = `
.Button-module__button___AbcpN {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.Button-module__button-default___miWV3 {
  color: var(--qtm-colors-neutral-0);
}

.Button-module__button-default-primary___bURr2 {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.Button-module__button-icon___c2VCp {
  pointer-events: none;
}

.Button-module__button-large___U5QhC,
.Button-module__button-xlarge___5YRMz {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.Button-module__button-xlarge___5YRMz {
  font-size: var(--qtm-font-size-24);
  line-height: calc(var(--qtm-base-font-size)*2);
  min-height: calc(var(--qtm-spacing-xxxlarge) + var(--qtm-spacing-xsmall));
}

.Button-module__shadow-2-neutral-500___hxqSk {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

<button
  class="Button-module__button___AbcpN Button-module__button-xlarge___5YRMz Button-module__button-default___miWV3 Button-module__button-default-primary___bURr2 Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-primary-900___HdA30 Button-module__shadow-4-primary-700___Gs4yK Button-module__shadow-8-primary-900___f0GvH"
  type="button"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium Button-module__button-icon___c2VCp css-i4bv87-MuiSvgIcon-root"
    data-qtm-preloader="icon"
    data-testid="InfoIcon"
    focusable="false"
    style="font-size: 40px; max-width: 40px;"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-6h2zm0-8h-2V7h2z"
    />
  </svg>
</button>
`;

exports[`Button component when center prop is set 1`] = `
.Button-module__button___AbcpN {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.Button-module__button-default___miWV3 {
  color: var(--qtm-colors-neutral-0);
}

.Button-module__button-default-primary___bURr2 {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.Button-module__button-medium___qo6Ym,
.Button-module__button-small___HWutw {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.Button-module__button-medium___qo6Ym {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.Button-module__button-center___cQBiO {
  margin-left: auto;
  margin-right: auto;
}

.Button-module__shadow-2-neutral-500___hxqSk {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

<button
  class="Button-module__button___AbcpN Button-module__button-medium___qo6Ym Button-module__button-center___cQBiO Button-module__button-default___miWV3 Button-module__button-default-primary___bURr2 Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-primary-900___HdA30 Button-module__shadow-4-primary-700___Gs4yK Button-module__shadow-8-primary-900___f0GvH"
  type="button"
>
  Text
</button>
`;

exports[`Button component when full prop is set 1`] = `
.Button-module__button___AbcpN {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.Button-module__button-default___miWV3 {
  color: var(--qtm-colors-neutral-0);
}

.Button-module__button-default-primary___bURr2 {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.Button-module__button-medium___qo6Ym,
.Button-module__button-small___HWutw {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.Button-module__button-medium___qo6Ym {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.Button-module__button-full___cUDBp {
  width: 100%;
}

.Button-module__shadow-2-neutral-500___hxqSk {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

<button
  class="Button-module__button___AbcpN Button-module__button-medium___qo6Ym Button-module__button-default___miWV3 Button-module__button-default-primary___bURr2 Button-module__button-full___cUDBp Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-primary-900___HdA30 Button-module__shadow-4-primary-700___Gs4yK Button-module__shadow-8-primary-900___f0GvH"
  type="button"
>
  Text
</button>
`;

exports[`Button component when there is a skin set should match secondary snapshot 1`] = `
.Button-module__button___AbcpN {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.Button-module__button-default___miWV3 {
  color: var(--qtm-colors-neutral-0);
}

.Button-module__button-default-neutral___Tymxh {
  background-color: var(--qtm-colors-neutral-700);
  border: 2px solid var(--qtm-colors-neutral-700);
}

.Button-module__button-medium___qo6Ym,
.Button-module__button-small___HWutw {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.Button-module__button-medium___qo6Ym {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.Button-module__shadow-2-neutral-500___hxqSk {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

<button
  class="Button-module__button___AbcpN Button-module__button-medium___qo6Ym Button-module__button-default___miWV3 Button-module__button-default-neutral___Tymxh Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-neutral-900___RMGup Button-module__shadow-4-neutral-700___qtCCL Button-module__shadow-8-neutral-900___ocRS3"
  type="button"
>
  neutral
</button>
`;

exports[`Button component when there is a skin set should match secondary snapshot 2`] = `
.Button-module__button___AbcpN {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.Button-module__button-default___miWV3 {
  color: var(--qtm-colors-neutral-0);
}

.Button-module__button-default-primary___bURr2 {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.Button-module__button-medium___qo6Ym,
.Button-module__button-small___HWutw {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.Button-module__button-medium___qo6Ym {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.Button-module__shadow-2-neutral-500___hxqSk {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

<button
  class="Button-module__button___AbcpN Button-module__button-medium___qo6Ym Button-module__button-default___miWV3 Button-module__button-default-primary___bURr2 Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-primary-900___HdA30 Button-module__shadow-4-primary-700___Gs4yK Button-module__shadow-8-primary-900___f0GvH"
  type="button"
>
  primary
</button>
`;

exports[`Button component when there is a skin set should match secondary snapshot 3`] = `
.Button-module__button___AbcpN {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.Button-module__button-default___miWV3 {
  color: var(--qtm-colors-neutral-0);
}

.Button-module__button-default-success___vT9vw {
  background-color: var(--qtm-colors-success-700);
  border: 2px solid var(--qtm-colors-success-700);
}

.Button-module__button-medium___qo6Ym,
.Button-module__button-small___HWutw {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.Button-module__button-medium___qo6Ym {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.Button-module__shadow-2-neutral-500___hxqSk {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

<button
  class="Button-module__button___AbcpN Button-module__button-medium___qo6Ym Button-module__button-default___miWV3 Button-module__button-default-success___vT9vw Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-success-900___cbr4C Button-module__shadow-4-success-700___T6Jye Button-module__shadow-8-success-900___3NjRb"
  type="button"
>
  success
</button>
`;

exports[`Button component when there is a skin set should match secondary snapshot 4`] = `
.Button-module__button___AbcpN {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.Button-module__button-default___miWV3 {
  color: var(--qtm-colors-neutral-0);
}

.Button-module__button-default-warning___yGKND {
  background-color: var(--qtm-colors-warning-700);
  border: 2px solid var(--qtm-colors-warning-700);
}

.Button-module__button-medium___qo6Ym,
.Button-module__button-small___HWutw {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.Button-module__button-medium___qo6Ym {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.Button-module__shadow-2-neutral-500___hxqSk {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

<button
  class="Button-module__button___AbcpN Button-module__button-medium___qo6Ym Button-module__button-default___miWV3 Button-module__button-default-warning___yGKND Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-warning-900___FHXer Button-module__shadow-4-warning-700___-Vppg Button-module__shadow-8-warning-900___UCpvI"
  type="button"
>
  warning
</button>
`;

exports[`Button component when there is a skin set should match secondary snapshot 5`] = `
.Button-module__button___AbcpN {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.Button-module__button-default___miWV3 {
  color: var(--qtm-colors-neutral-0);
}

.Button-module__button-default-error___XtXR- {
  background-color: var(--qtm-colors-error-700);
  border: 2px solid var(--qtm-colors-error-700);
}

.Button-module__button-medium___qo6Ym,
.Button-module__button-small___HWutw {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.Button-module__button-medium___qo6Ym {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.Button-module__shadow-2-neutral-500___hxqSk {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

<button
  class="Button-module__button___AbcpN Button-module__button-medium___qo6Ym Button-module__button-default___miWV3 Button-module__button-default-error___XtXR- Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-error-900___aw0O- Button-module__shadow-4-error-700___0k-yJ Button-module__shadow-8-error-900___Kkp5M"
  type="button"
>
  error
</button>
`;

exports[`Button component when there is a type set should match secondary snapshot 1`] = `
.Button-module__button___AbcpN {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.Button-module__button-default___miWV3 {
  color: var(--qtm-colors-neutral-0);
}

.Button-module__button-default-primary___bURr2 {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.Button-module__button-medium___qo6Ym,
.Button-module__button-small___HWutw {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.Button-module__button-medium___qo6Ym {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.Button-module__shadow-2-neutral-500___hxqSk {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

<button
  class="Button-module__button___AbcpN Button-module__button-medium___qo6Ym Button-module__button-default___miWV3 Button-module__button-default-primary___bURr2 Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-primary-900___HdA30 Button-module__shadow-4-primary-700___Gs4yK Button-module__shadow-8-primary-900___f0GvH"
  type="button"
>
  button
</button>
`;

exports[`Button component when there is a type set should match secondary snapshot 2`] = `
.Button-module__button___AbcpN {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.Button-module__button-default___miWV3 {
  color: var(--qtm-colors-neutral-0);
}

.Button-module__button-default-primary___bURr2 {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.Button-module__button-medium___qo6Ym,
.Button-module__button-small___HWutw {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.Button-module__button-medium___qo6Ym {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.Button-module__shadow-2-neutral-500___hxqSk {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

<button
  class="Button-module__button___AbcpN Button-module__button-medium___qo6Ym Button-module__button-default___miWV3 Button-module__button-default-primary___bURr2 Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-primary-900___HdA30 Button-module__shadow-4-primary-700___Gs4yK Button-module__shadow-8-primary-900___f0GvH"
  type="reset"
>
  reset
</button>
`;

exports[`Button component when there is a type set should match secondary snapshot 3`] = `
.Button-module__button___AbcpN {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.Button-module__button-default___miWV3 {
  color: var(--qtm-colors-neutral-0);
}

.Button-module__button-default-primary___bURr2 {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.Button-module__button-medium___qo6Ym,
.Button-module__button-small___HWutw {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.Button-module__button-medium___qo6Ym {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.Button-module__shadow-2-neutral-500___hxqSk {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

<button
  class="Button-module__button___AbcpN Button-module__button-medium___qo6Ym Button-module__button-default___miWV3 Button-module__button-default-primary___bURr2 Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-primary-900___HdA30 Button-module__shadow-4-primary-700___Gs4yK Button-module__shadow-8-primary-900___f0GvH"
  type="submit"
>
  submit
</button>
`;

exports[`Button component with an icon should match secondary snapshot 1`] = `
.Button-module__button___AbcpN {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.Button-module__button-default___miWV3 {
  color: var(--qtm-colors-neutral-0);
}

.Button-module__button-default-primary___bURr2 {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.Button-module__button-icon___c2VCp {
  pointer-events: none;
}

.Button-module__button-icon-with-children___-Gopd {
  margin-right: var(--qtm-spacing-xsmall);
}

.Button-module__button-icon-medium___ppo2m,
.Button-module__button-icon-small___m8db9,
.Button-module__button-icon-xsmall___prEKP {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.Button-module__button-medium___qo6Ym,
.Button-module__button-small___HWutw {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.Button-module__button-medium___qo6Ym {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.Button-module__shadow-2-neutral-500___hxqSk {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

<button
  class="Button-module__button___AbcpN Button-module__button-medium___qo6Ym Button-module__button-default___miWV3 Button-module__button-default-primary___bURr2 Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-primary-900___HdA30 Button-module__shadow-4-primary-700___Gs4yK Button-module__shadow-8-primary-900___f0GvH"
  type="button"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium Button-module__button-icon___c2VCp Button-module__button-icon-with-children___-Gopd Button-module__button-icon-medium___ppo2m css-i4bv87-MuiSvgIcon-root"
    data-qtm-preloader="icon"
    data-testid="SearchIcon"
    focusable="false"
    style="font-size: 24px; max-width: 24px;"
    viewBox="0 0 24 24"
  >
    <path
      d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14"
    />
  </svg>
  Search
</button>
`;

exports[`Button component with an icon should match secondary snapshot 2`] = `
.Button-module__button___AbcpN {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.Button-module__button-default___miWV3 {
  color: var(--qtm-colors-neutral-0);
}

.Button-module__button-default-primary___bURr2 {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.Button-module__button-icon___c2VCp {
  pointer-events: none;
}

.Button-module__button-icon-with-children___-Gopd {
  margin-right: var(--qtm-spacing-xsmall);
}

.Button-module__button-icon-medium___ppo2m,
.Button-module__button-icon-small___m8db9,
.Button-module__button-icon-xsmall___prEKP {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.Button-module__button-medium___qo6Ym,
.Button-module__button-small___HWutw {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.Button-module__button-medium___qo6Ym {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.Button-module__shadow-2-neutral-500___hxqSk {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

<button
  class="Button-module__button___AbcpN Button-module__button-medium___qo6Ym Button-module__button-default___miWV3 Button-module__button-default-primary___bURr2 Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-primary-900___HdA30 Button-module__shadow-4-primary-700___Gs4yK Button-module__shadow-8-primary-900___f0GvH"
  type="button"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium Button-module__button-icon___c2VCp Button-module__button-icon-with-children___-Gopd Button-module__button-icon-medium___ppo2m css-i4bv87-MuiSvgIcon-root"
    data-qtm-preloader="icon"
    data-testid="PaymentIcon"
    focusable="false"
    style="font-size: 24px; max-width: 24px;"
    viewBox="0 0 24 24"
  >
    <path
      d="M20 4H4c-1.11 0-1.99.89-1.99 2L2 18c0 1.11.89 2 2 2h16c1.11 0 2-.89 2-2V6c0-1.11-.89-2-2-2m0 14H4v-6h16zm0-10H4V6h16z"
    />
  </svg>
  Payment
</button>
`;

exports[`Button component with an icon should match secondary snapshot 3`] = `
.Button-module__button___AbcpN {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.Button-module__button-default___miWV3 {
  color: var(--qtm-colors-neutral-0);
}

.Button-module__button-default-primary___bURr2 {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.Button-module__button-icon___c2VCp {
  pointer-events: none;
}

.Button-module__button-icon-with-children___-Gopd {
  margin-right: var(--qtm-spacing-xsmall);
}

.Button-module__button-icon-medium___ppo2m,
.Button-module__button-icon-small___m8db9,
.Button-module__button-icon-xsmall___prEKP {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.Button-module__button-medium___qo6Ym,
.Button-module__button-small___HWutw {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.Button-module__button-medium___qo6Ym {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.Button-module__shadow-2-neutral-500___hxqSk {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

<button
  class="Button-module__button___AbcpN Button-module__button-medium___qo6Ym Button-module__button-default___miWV3 Button-module__button-default-primary___bURr2 Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-primary-900___HdA30 Button-module__shadow-4-primary-700___Gs4yK Button-module__shadow-8-primary-900___f0GvH"
  type="button"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium Button-module__button-icon___c2VCp Button-module__button-icon-with-children___-Gopd Button-module__button-icon-medium___ppo2m css-i4bv87-MuiSvgIcon-root"
    data-qtm-preloader="icon"
    data-testid="LockIcon"
    focusable="false"
    style="font-size: 24px; max-width: 24px;"
    viewBox="0 0 24 24"
  >
    <path
      d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2m-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2m3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1z"
    />
  </svg>
  Lock
</button>
`;

exports[`Button component with an icon should match secondary snapshot 4`] = `
.Button-module__button___AbcpN {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.Button-module__button-default___miWV3 {
  color: var(--qtm-colors-neutral-0);
}

.Button-module__button-default-primary___bURr2 {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.Button-module__button-icon___c2VCp {
  pointer-events: none;
}

.Button-module__button-icon-with-children___-Gopd {
  margin-right: var(--qtm-spacing-xsmall);
}

.Button-module__button-icon-medium___ppo2m,
.Button-module__button-icon-small___m8db9,
.Button-module__button-icon-xsmall___prEKP {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.Button-module__button-medium___qo6Ym,
.Button-module__button-small___HWutw {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.Button-module__button-medium___qo6Ym {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.Button-module__shadow-2-neutral-500___hxqSk {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

<button
  class="Button-module__button___AbcpN Button-module__button-medium___qo6Ym Button-module__button-default___miWV3 Button-module__button-default-primary___bURr2 Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-primary-900___HdA30 Button-module__shadow-4-primary-700___Gs4yK Button-module__shadow-8-primary-900___f0GvH"
  type="button"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium Button-module__button-icon___c2VCp Button-module__button-icon-with-children___-Gopd Button-module__button-icon-medium___ppo2m css-i4bv87-MuiSvgIcon-root"
    data-qtm-preloader="icon"
    data-testid="StarIcon"
    focusable="false"
    style="font-size: 24px; max-width: 24px;"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 17.27 18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
    />
  </svg>
  Star
</button>
`;
